--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
                     <button class="against-friend">Play against a friend?</button>
                 </div>
             </div>
+            <div class="again-ai-container">
+
+            </div>
             <div class="against-friend-container">
                 <div>
                     <p>Player 1 name</p>
