Add play again functionality

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                 <h1></h1>
             </div>
             <div class="grid-container"></div>
+            <div class="play-again-container">
+                <button>Play Again?</button>
+            </div>
         </div>
     </div>
     <script src="scripts.js"></script>
